# RuneWeave

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SPEC.md  runeweave.policy.yml  rust-toolchain.toml
.github/workflows/: ci.yml
examples/: baseline.json  baseline.yaml  plan.json  polyglot.json  runeweave.policy.yml  simple.json
schemas/: stack.schema.json
src/: cli.rs  git.rs  language_pack.rs  lib.rs  main.rs  manifest.rs  render.rs  types.rs  verify.rs
templates/: .gitignore  rust-toolchain.toml  workspace.toml
templates/.github/workflows/: ci.yml
templates/services/api/: Cargo.toml  main.rs
templates/services/api-edge/: Cargo.toml  lib.rs  wrangler.toml
templates/services/worker/: Cargo.toml
templates/tools/cli/: Cargo.toml  main.rs
tests/: integration_test.rs  unit.rs
