[package]
name = "runeweave"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["RuneWeave Contributors"]
description = "Generate Rust-Edge monorepo scaffolds from Runeforge blueprints"
repository = "https://github.com/yourusername/runeweave"
license = "MIT OR Apache-2.0"
keywords = ["rust", "edge", "scaffold", "monorepo", "template"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "0.8"
tera = "1.19"
git2 = "0.18"
rand = { version = "0.8", features = ["std"] }
rand_chacha = "0.3"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
directories = "5.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
tempfile = "3.8"
walkdir = "2.4"
include_dir = "0.7"