[package]
name = "runeweave"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
description = "Rust-Edge monorepo scaffolding tool"
repository = "https://github.com/NishizukaKoichi/RuneWeave"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = "0.8"
tera = "1.19"
git2 = "0.18"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }
tempfile = "3.8"