[package]
name = "{{ service.name }}"
version = "{{ project.version }}"
edition = "2021"
rust-version = "{{ project.rust_version | default(value="1.80") }}"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.18"
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
{%- for dep in service.dependencies | default(value=[]) %}
{%- if dep not in ["serde", "serde_json", "worker", "wasm-bindgen"] %}
{{ dep }} = "*"
{%- endif %}
{%- endfor %}