[package]
name = "{{ service.name }}"
version = "{{ project.version }}"
edition = "2021"
rust-version = "{{ project.rust_version | default(value="1.80") }}"

[dependencies]
actix-web = "4"
actix-rt = "2"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
env_logger = "0.11"
{%- for dep in service.dependencies | default(value=[]) %}
{%- if dep not in ["tokio", "serde", "serde_json", "anyhow", "tracing", "tracing-subscriber"] %}
{{ dep }} = "*"
{%- endif %}
{%- endfor %}