[package]
name = "{{ tool.name }}"
version = "{{ project.version }}"
edition = "2021"
rust-version = "{{ project.rust_version | default(value="1.80") }}"

[[bin]]
name = "{{ tool.name }}"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }